reference/tests/snapshots/snapshot__run_reference_prql@derive-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/transforms/derive-0.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary
FROM
  employees
