reference/tests/snapshots/snapshot__run_reference_prql@dialect-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/dialect-0.prql
---
SELECT
  employees.*
FROM
  employees
ORDER BY
  age
LIMIT
  10
