reference/tests/snapshots/snapshot__run_reference_prql@dialect_and_version-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/dialect_and_version-1.prql
---
SELECT
  TOP (10) employees.*
FROM
  employees
ORDER BY
  age
